# CursachDjango

./: .gitignore  manage.py  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  apps.py  models.py  urls.py  views.py
newsletters/: admin.py  models.py  tasks.py  urls.py  views.py
newsletters/management/commands/: create_manager_group.py  send_newsletter.py
newsletters/migrations/: 0001_initial.py  0002_initial.py
newsletters/templates/: base.html  newsletter_confirm_delete.html  newsletter_form.html  newsletter_list.html  recipient_confirm_delete.html  recipient_form.html
newsletters/templates/newsletters/: attempt_confirm_delete.html  attempt_list.html  home.html  message_confirm_delete.html  message_form.html  message_list.html  recipient_list.html
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
